update api-gateway